# cidr_bottle

./: .gitignore  .gitlab-ci.yml  LICENSE  Readme.md  pyproject.toml
cidr_bottle/: __init__.py  cidr_bottle.py  cidr_bottle_fast.py  subnets.py
tests/: test_cidr_bottle.py  test_cidr_fastbottle.py  test_subnets.py
tests/data/: children_test_data
